<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="20pt"
        android:text="@string/ajouter_en_stock"
        android:textSize="30dp"
        android:textAlignment="center"
        android:gravity="center_horizontal" />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">
        <EditText
            android:id="@+id/field_seed_nom"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:drawableRight="@drawable/ic_edit"
            android:focusedByDefault="true"
            android:hint="@string/nom_du_produit" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <EditText
            android:id="@+id/field_seed_qtt"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:drawableRight="@drawable/ic_edit"
            android:focusedByDefault="true"
            android:hint="@string/quantite" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <EditText
            android:id="@+id/field_seed_prix"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:drawableRight="@drawable/ic_money"
            android:inputType="number"
            android:focusedByDefault="true"
            android:hint="@string/prix" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <EditText
            android:id="@+id/field_seed_company_from"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:drawableRight="@drawable/ic_company_business"
            android:focusedByDefault="true"
            android:hint="@string/company" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/field_seed_date"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:inputType="datetime"
            android:drawableRight="@drawable/ic_date"
            android:focusedByDefault="true"
            android:hint="@string/date" />
    </com.google.android.material.textfield.TextInputLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_seed_cancel"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/annuler"
            android:textColor="#228B22"
            android:padding="0dp"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"/>
        <Button
            android:id="@+id/btn_seed_submit"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/material_button"
            android:text="@string/ajouter"
            android:textColor="#fff"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>
</LinearLayout>