<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/default_margin"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_plant_page_upload"
            android:textColor="#fff"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:padding="@dimen/default_margin"
            android:background="@color/green"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/trending2"/>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="8pt"
                android:text="@string/Variète"/>
            <Spinner
                android:id="@+id/combo_seeds_category"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:spinnerMode="dropdown"
                android:scrollbars="vertical"
                android:background="@drawable/spiner_layout"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="8pt"
                android:text="@string/category"/>
            <Spinner
                android:id="@+id/combo_emission_category"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:spinnerMode="dropdown"
                android:scrollbars="vertical"
                android:background="@drawable/spiner_layout"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <EditText
                    android:id="@+id/field_seed_qtt"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:drawableRight="@drawable/ic_edit"
                    android:focusedByDefault="true"
                    android:hint="@string/quantite" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <EditText
                    android:id="@+id/field_seed_prix"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:drawableRight="@drawable/ic_money"
                    android:inputType="number"
                    android:focusedByDefault="true"
                    android:hint="@string/prix" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <EditText
                    android:id="@+id/field_seed_details"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:drawableRight="@drawable/ic_money"
                    android:inputType="number"
                    android:focusedByDefault="true"
                    android:hint="@string/details" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <EditText
                    android:id="@+id/field_seed_company_from"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:drawableRight="@drawable/ic_company_business"
                    android:focusedByDefault="true"
                    android:hint="@string/company" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/field_seed_date"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:inputType="datetime"
                    android:drawableRight="@drawable/ic_date"
                    android:focusedByDefault="true"
                    android:hint="@string/date" />
            </com.google.android.material.textfield.TextInputLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/btn_seed_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/annuler"
                    android:textColor="#228B22"
                    android:padding="0dp"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"/>
                <Button
                    android:id="@+id/btn_seed_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/material_button"
                    android:text="@string/ajouter"
                    android:textColor="#fff"
                    android:layout_alignParentEnd="true" />
            </RelativeLayout>
        </LinearLayout>

    </ScrollView>
</LinearLayout>